--- a/src/config.env
+++ b/src/config.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://user_dev:gXDEzEdev9W2inas@employees.thcvn.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
